fix overflow html

--- a/Assets/main.css
+++ b/Assets/main.css
@@ -106,6 +106,10 @@
   overflow-x: hidden;
 }
 
+#palette * {
+  overflow-x: visible;
+}
+
 nav {
   display: flex;
   justify-content: center;
