--- a/Sass/layout/_main-container.scss
+++ b/Sass/layout/_main-container.scss
@@ -3,4 +3,6 @@
     margin:0;
     overflow-x: hidden;
 }
-
+#palette * {
+    overflow-x: visible;
+}
